--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -68,9 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -80,7 +78,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -100,20 +97,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 79.369  90.777  68.769  21.38 ]\n",
-      " [ 63.879  14.712  12.436   6.809]\n",
-      " [ 45.633  55.376  33.994  50.38 ]\n",
-      " [ 49.242  22.061  76.27   45.947]] \n",
+      "[[ 41.515  43.654  28.351  96.999]\n",
+      " [ 55.294  95.213  59.051  84.839]\n",
+      " [ 18.412  15.829  95.362   6.438]\n",
+      " [ 86.056  88.243  59.955  53.072]] \n",
       "\n",
-      "[[ 79.369  90.777  68.769  21.38 ]\n",
-      " [  0.     14.712  12.436   6.809]\n",
-      " [  0.      0.     33.994  50.38 ]\n",
-      " [  0.      0.      0.     45.947]] \n",
+      "[[ 41.515  43.654  28.351  96.999]\n",
+      " [  0.     95.213  59.051  84.839]\n",
+      " [  0.      0.     95.362   6.438]\n",
+      " [  0.      0.      0.     53.072]] \n",
       "\n",
-      "[[ 79.369   0.      0.      0.   ]\n",
-      " [ 63.879  14.712   0.      0.   ]\n",
-      " [ 45.633  55.376  33.994   0.   ]\n",
-      " [ 49.242  22.061  76.27   45.947]]\n"
+      "[[ 41.515   0.      0.      0.   ]\n",
+      " [ 55.294  95.213   0.      0.   ]\n",
+      " [ 18.412  15.829  95.362   0.   ]\n",
+      " [ 86.056  88.243  59.955  53.072]]\n"
      ]
     }
    ],
@@ -192,10 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def U2uc(U):\n",
@@ -218,10 +213,17 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0 1 2 0 1 2 3]\n",
+      "[0 1 1 2 2 2 3 3 3 3]\n"
+     ]
+    }
+   ],
    "source": [
     "uc = U2uc(U)"
    ]
@@ -235,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 79.369  90.777  14.712  68.769  12.436  33.994  21.38    6.809  50.38\n",
-      "  45.947]\n"
+      "[ 41.515  43.654  95.213  28.351  59.051  95.362  96.999  84.839   6.438\n",
+      "  53.072]\n"
      ]
     }
    ],
@@ -253,10 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 79.369  90.777  68.769  21.38 ]\n",
-      " [  0.     14.712  12.436   6.809]\n",
-      " [  0.      0.     33.994  50.38 ]\n",
-      " [  0.      0.      0.     45.947]]\n"
+      "[[ 41.515  43.654  28.351  96.999]\n",
+      " [  0.     95.213  59.051  84.839]\n",
+      " [  0.      0.     95.362   6.438]\n",
+      " [  0.      0.      0.     53.072]]\n"
      ]
     }
    ],
@@ -364,9 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def U2ur(U):\n",
@@ -382,10 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ur = U2ur(U)"
@@ -393,22 +391,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 41.515  43.654  28.351  96.999  95.213  59.051  84.839  95.362   6.438\n",
+      "  53.072]\n"
+     ]
+    }
+   ],
    "source": [
     "print ur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 41.515  43.654  28.351  96.999]\n",
+      " [  0.     95.213  59.051  84.839]\n",
+      " [  0.      0.     95.362   6.438]\n",
+      " [  0.      0.      0.     53.072]]\n"
+     ]
+    }
+   ],
    "source": [
     "print U"
    ]
@@ -446,11 +460,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ij = 11 | k = 0\n",
+      "ij = 21 | k = 1\n",
+      "ij = 31 | k = 2\n",
+      "ij = 41 | k = 3\n",
+      "ij = 22 | k = 4\n",
+      "ij = 32 | k = 5\n",
+      "ij = 42 | k = 6\n",
+      "ij = 33 | k = 7\n",
+      "ij = 43 | k = 8\n",
+      "ij = 44 | k = 9\n"
+     ]
+    }
+   ],
    "source": [
     "for j in range(1,N+1):\n",
     "    for i in range(j,N+1):\n",
@@ -467,10 +496,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def L2lc(L):\n",
@@ -490,10 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lc = L2lc(L)"
@@ -501,22 +526,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 41.515  55.294  18.412  86.056  95.213  15.829  88.243  95.362  59.955\n",
+      "  53.072]\n"
+     ]
+    }
+   ],
    "source": [
     "print lc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 41.515   0.      0.      0.   ]\n",
+      " [ 55.294  95.213   0.      0.   ]\n",
+      " [ 18.412  15.829  95.362   0.   ]\n",
+      " [ 86.056  88.243  59.955  53.072]]\n"
+     ]
+    }
+   ],
    "source": [
     "print L"
    ]
@@ -554,11 +595,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ij = 11 | k = 0\n",
+      "ij = 21 | k = 1\n",
+      "ij = 22 | k = 2\n",
+      "ij = 31 | k = 3\n",
+      "ij = 32 | k = 4\n",
+      "ij = 33 | k = 5\n",
+      "ij = 41 | k = 6\n",
+      "ij = 42 | k = 7\n",
+      "ij = 43 | k = 8\n",
+      "ij = 44 | k = 9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,N+1):\n",
     "    for j in range(1,i+1):\n",
@@ -575,10 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def L2lr(L):\n",
@@ -594,10 +648,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lr = L2lr(L)"
@@ -605,22 +657,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 41.515  55.294  95.213  18.412  15.829  95.362  86.056  88.243  59.955\n",
+      "  53.072]\n"
+     ]
+    }
+   ],
    "source": [
     "print lr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 41.515   0.      0.      0.   ]\n",
+      " [ 55.294  95.213   0.      0.   ]\n",
+      " [ 18.412  15.829  95.362   0.   ]\n",
+      " [ 86.056  88.243  59.955  53.072]]\n"
+     ]
+    }
+   ],
    "source": [
     "print L"
    ]
@@ -660,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise (extra)"
    ]
   },
   {
