--- a/Content/diagonal_matrices.ipynb
+++ b/Content/diagonal_matrices.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
