block matrices and intro to linear syst

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -4,28 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Symmetric matrices"
+    "# Block matrices"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the $N \\times N$ matrix $\\mathbf{S}$ given by:"
+    "Consider an $N \\times M$ matrix $\\mathbf{A}$ given by:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{S} \n",
-    "= \\left[ \\begin{array}{ccccc}\n",
-    "s_{11} & s_{12} & s_{13} & \\cdots & s_{1N} \\\\\n",
-    "s_{12} & s_{22} & s_{23} & \\cdots & s_{2N} \\\\\n",
-    "s_{13} & s_{23} & s_{33} & \\cdots & s_{3N}  \\\\\n",
-    "\\vdots & \\vdots & \\vdots & \\ddots & \\vdots  \\\\\n",
-    "s_{1N} & s_{2N} & s_{3N} & \\cdots & s_{NN}\n",
-    "\\end{array} \\right] \\: .\n",
+    "$$\\mathbf{A} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{A}_{11} & \\cdots & \\mathbf{A}_{1r} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{A}_{q1} & \\cdots & \\mathbf{A}_{qr}\n",
+    "\\end{bmatrix} \\: ,\n",
     "$$"
    ]
   },
@@ -33,7 +31,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This matrix is called **symmetric matrix**. Notice that, in this matrix, $s_{ij} = s_{ji}$."
+    "where "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "N = \\sum_{\\alpha = 1}^{q} N_{\\alpha} \\: ,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "M = \\sum_{\\beta = 1}^{r} M_{\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and $\\mathbf{A}_{\\alpha \\beta}$ are $N_{\\alpha} \\times M_{\\beta}$ submatrices, $\\alpha = 1, \\dots, q$, $\\beta = 1, \\dots, r$, defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A}_{\\alpha \\beta} =\n",
+    "\\begin{bmatrix}\n",
+    "a_{11}^{(\\alpha \\beta)} & \\cdots & a_{1 M_{\\beta}}^{(\\alpha \\beta)} \\\\\n",
+    "\\vdots & & \\vdots \\\\\n",
+    "a_{N_{\\alpha} 1}^{(\\alpha \\beta)} & \\cdots & a_{N_{\\alpha} M_{\\beta}}^{(\\alpha \\beta)}\n",
+    "\\end{bmatrix} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tha matrix $\\mathbf{A}$, formed by the submatrices $\\mathbf{A}_{\\alpha \\beta}$, is an example of **block matrix**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiplying a block matrix by a scalar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be easily shown that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mu \\mathbf{A} = \\begin{bmatrix}\n",
+    "\\mu \\mathbf{A}_{11} & \\cdots & \\mu \\mathbf{A}_{1r} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mu \\mathbf{A}_{q1} & \\cdots & \\mu \\mathbf{A}_{qr}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mu$ is a constant. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding two block matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's consider another $N \\times M$ matrix $\\mathbf{B}$ given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mathbf{B} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{B}_{11} & \\cdots & \\mathbf{B}_{1r} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{B}_{q1} & \\cdots & \\mathbf{B}_{qr}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{B}_{\\alpha \\beta}$ are $N_{\\alpha} \\times M_{\\beta}$ submatrices, $\\alpha = 1, \\dots, q$, $\\beta = 1, \\dots, r$, defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{B}_{\\alpha \\beta} =\n",
+    "\\begin{bmatrix}\n",
+    "b_{11}^{(\\alpha \\beta)} & \\cdots & b_{1 M_{\\beta}}^{(\\alpha \\beta)} \\\\\n",
+    "\\vdots & & \\vdots \\\\\n",
+    "b_{N_{\\alpha} 1}^{(\\alpha \\beta)} & \\cdots & b_{N_{\\alpha} M_{\\beta}}^{(\\alpha \\beta)}\n",
+    "\\end{bmatrix} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that, in this case, a resultant $N \\times M$ matrix $\\mathbf{C}$ can be defined by adding the submatrices $\\mathbf{A}_{\\alpha \\beta}$ and $\\mathbf{B}_{\\alpha \\beta}$, so that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mathbf{C} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{C}_{11} & \\cdots & \\mathbf{C}_{1r} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{C}_{q1} & \\cdots & \\mathbf{C}_{qr}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{C_{\\alpha \\beta}} = \\mathbf{A}_{\\alpha \\beta} + \\mathbf{B}_{\\alpha \\beta}$, $\\alpha = 1, \\dots, q$, $\\beta = 1, \\dots, r$. \n",
+    "\n",
+    "**Be careful!**\n",
+    "\n",
+    "The submatrices $\\mathbf{C_{\\alpha \\beta}}$ can be defined in this way because the submatrices $\\mathbf{A}_{\\alpha \\beta}$ and $\\mathbf{B}_{\\alpha \\beta}$ have exactly the same shape. Otherwise, the resultant submatrices $\\mathbf{C_{\\alpha \\beta}}$ cannot be defined as the sum of the submatrices $\\mathbf{A}_{\\alpha \\beta}$ and $\\mathbf{B}_{\\alpha \\beta}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Product of two block matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PAREI AQUI"
    ]
   },
   {
