--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -60,9 +60,9 @@
    "source": [
     "$$\\mathbf{A} = \\left[\n",
     "\\begin{array}{ccc}\n",
-    "1 & 5 & -5,3 \\\\\n",
-    "2,4 & -2 & 1 \\\\\n",
-    "7,8 & -4,1 & 6,4\n",
+    "1 & 5 & -5.3 \\\\\n",
+    "2.4 & -2 & 1 \\\\\n",
+    "7.8 & -4.1 & 6.4\n",
     "\\end{array}\n",
     "\\right] \\: ,$$"
    ]
@@ -188,6 +188,58 @@
    "source": [
     "print x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to verify if x is a true solution?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_calc = np.dot(A, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 42.  11.  67.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y_calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 42.  11.  67.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y"
+   ]
   }
  ],
  "metadata": {
@@ -207,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
