product of two block matrices

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -210,6 +210,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<img src='block_matrices_3.png' width = 500>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
