--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -31,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -43,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array([[2.,1.,-1.],\n",
@@ -56,9 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y = np.array([8., -11., -3.])"
@@ -74,9 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linalg.solve(A,y)"
@@ -109,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "I = np.identity(3)"
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -204,10 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "u = np.array([1., 0., 0.])"
@@ -215,10 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "t = np.array([0., np.dot(P1, A)[1][0]/np.dot(P1, A)[0][0], np.dot(P1, A)[2][0]/np.dot(P1, A)[0][0]])"
@@ -226,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "A1 = (I - np.outer(t, u)).dot(np.dot(P1,A))"
@@ -237,19 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.        , -1.        ,  2.        ],\n",
+       "       [ 0.        ,  0.33333333,  0.33333333],\n",
+       "       [ 0.        ,  1.66666667,  0.66666667]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y1 = (I - np.outer(t, u)).dot(np.dot(P1,y))"
@@ -257,9 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-11.        ,   0.66666667,   4.33333333])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y1"
    ]
@@ -280,9 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  0.  1.]\n",
+      " [ 0.  1.  0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "P2 = np.identity(3)[[0,2,1]]\n",
     "\n",
@@ -291,28 +307,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          1.66666667  0.66666667]\n",
+      " [ 0.          0.33333333  0.33333333]]\n"
+     ]
+    }
+   ],
    "source": [
     "print np.dot(P2, A1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11.           4.33333333   0.66666667]\n"
+     ]
+    }
+   ],
    "source": [
     "print np.dot(P2, y1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "u = np.array([0., 1., 0.])"
@@ -320,10 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "t = np.array([0., 0., np.dot(P2, A1)[2][1]/np.dot(P2, A1)[1][1]])"
@@ -331,10 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "B = (I - np.outer(t, u)).dot(np.dot(P2, A1))"
@@ -342,19 +370,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.        , -1.        ,  2.        ],\n",
+       "       [ 0.        ,  1.66666667,  0.66666667],\n",
+       "       [ 0.        ,  0.        ,  0.2       ]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "z = (I - np.outer(t, u)).dot(np.dot(P2, y1))"
@@ -362,9 +401,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-11.        ,   4.33333333,  -0.2       ])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "z"
    ]
@@ -378,9 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
     "print np.linalg.solve(B,z)"
    ]
@@ -394,9 +452,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
     "print np.linalg.solve(A,y)"
    ]
@@ -721,10 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def permut (C, i):\n",
@@ -737,10 +801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "C = 10*np.round(np.random.rand(3,4), decimals=3)"
@@ -748,29 +810,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.78  2.62  2.67  9.46]\n",
-      " [ 3.65  4.76  8.47  3.41]\n",
-      " [ 8.18  3.96  7.85  2.32]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "p, E = permut(C, 0)"
@@ -778,55 +828,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8.18  3.96  7.85  2.32]\n",
-      " [ 3.65  4.76  8.47  3.41]\n",
-      " [ 1.78  2.62  2.67  9.46]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print E"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 1, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8.18  3.96  7.85  2.32]\n",
-      " [ 3.65  4.76  8.47  3.41]\n",
-      " [ 1.78  2.62  2.67  9.46]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print C[p]"
    ]
@@ -834,9 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -857,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
