product of two block matrices

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_1.png' width = 500>"
+    "<img src='block_matrices_1.png', width = 500>"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_2.png' width = 500>"
+    "<img src='block_matrices_2.png', width = 500>"
    ]
   },
   {
@@ -211,21 +211,99 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{A}$ and $\\mathbf{B}$ be two block matrices given by\n",
+    "\n",
+    "$$\\mathbf{A} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{A}_{11} & \\cdots & \\mathbf{A}_{1r} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{A}_{q1} & \\cdots & \\mathbf{A}_{qr}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\\mathbf{B} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{B}_{11} & \\cdots & \\mathbf{B}_{1s} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{B}_{r1} & \\cdots & \\mathbf{B}_{rs}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{A}_{\\alpha \\beta}$ and $\\mathbf{B}_{\\beta \\gamma}$ are, respectively, $N_{\\alpha} \\times M_{\\beta}$ and $M_{\\beta} \\times L_{\\gamma}$ submatrices, $\\alpha = 1, \\dots, q$, $\\beta = 1, \\dots, r$, $\\gamma = 1, \\dots, s$,\n",
+    "\n",
+    "$$\n",
+    "N = \\sum_{\\alpha = 1}^{r} N_{\\alpha} \\: ,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "M = \\sum_{\\beta = 1}^{q} M_{\\beta}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "L = \\sum_{\\gamma = 1}^{s} L_{\\gamma} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, the resultant $N \\times L$ matrix $\\mathbf{C}$ obtained by the product $\\mathbf{A}\\mathbf{B}$ is given by\n",
+    "\n",
+    "$$\\mathbf{C} \n",
+    "= \\begin{bmatrix}\n",
+    "\\mathbf{C}_{11} & \\cdots & \\mathbf{C}_{1s} \\\\\n",
+    "\\vdots & & \\vdots  \\\\\n",
+    "\\mathbf{C}_{q1} & \\cdots & \\mathbf{C}_{qs}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{C}_{\\alpha \\gamma}$ are $N_{\\alpha} \\times L_{\\gamma}$ submatrices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figure below shows a particular case in which the resultant matrix $\\matrix{C}$ is given by\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{C} = \\begin{bmatrix}\n",
+    "\\mathbf{C}_{11} & \\mathbf{C}_{12} \\\\\n",
+    "\\mathbf{C}_{21} & \\mathbf{C}_{22}\n",
+    "\\end{bmatrix} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{C}_{\\alpha \\beta} = \\sum_{\\beta = 1}^{3} \\mathbf{A}_{\\alpha\\beta} \\mathbf{B}_{\\beta\\gamma} \\: .\n",
+    "$$\n",
+    "\n",
+    "The figure below also illustrates how the submatrix $\\mathbf{C}_{11}$ is computed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "<img src='block_matrices_3.png' width = 500>"
+    "<img src='block_matrices_3.png', width = 500>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's consider the particular case in which "
+   ]
   }
  ],
  "metadata": {
